updated README.md file for running instructions