@@ -4,3 +4,33 @@ Use this repo for both Assignment 3 and also your final Project (as you will be 
 
 Be sure to update this README file to provide an easy-to-follow set of instructions on how to run your program. 
 
+
+# SOFTENG 206 Assignment 3 Team 39
+
+#Note:
+
+To run this program, type the following from the command line:
+the wordquiz.sh specifies the class path for the java program to run:
+
+
+First, change the file permission to excutable:
+
+```
+> chmod +x StartGame.sh
+```
+
+Now run it:
+
+```
+> ./StartGame.sh
+```
+
+-------------------------------------------------------------------
+
+Alternatively, you can run the KemuKupu.jar file straight from the current folder, and make sure there exist:
+ ./words directory
+ ./data directory
+
+```
+>java -Djdk.gtk.version=2 --module-path /home/student/javafx-sdk-11.0.2/javafx --add-modules javafx.controls,javafx.media,javafx.base,javafx.fxml -jar KemuKupu.jar
+```
